media-server/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: kavita
